# Tindo

./: .env.example  .gitignore  .replit  README.md  google_auth.py  inefablestore.db  init_db.sql  main.py  pyproject.toml  render.yaml  requirements.txt  sqlite_fallback.py
attached_assets/: Pasted--Especificaciones-para-el-Panel-Administrador-Inefablestore-PostgreSQL-Objetivo-del--1751411296476_1751411296477.txt  Pasted-Objetivo-Crear-la-interfaz-visual-del-sitio-web-para-usuarios-index-utilizando-nicamente-HTML--1751412836275_1751412836277.txt  Pasted-TTPError-requests-exceptions-HTTPError-404-Client-Error-Not-Found-for-url-https-accounts-googl-1752344671499_1752344671501.txt
data/proyecto2/: README.md
legacy/: init_db.postgres.sql  sqlite_fallback.py
scripts/: check_db.py  seed_admin.py  test_admin_api.py
static/: app.js  styles.css
templates/: admin.html  admin_login.html  index.html
